my personal links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Get exposure to my personal network by posting job offers">
         <meta name="author" content="">
-        <meta property="og:url" content="Your website link"/>
+        <meta property="og:url" content="https://vlachakisg.github.io/Not-another-job-board/"/>
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Use my personal network"/>
         <meta property="og:site_name" content="Use my personal network"/>
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link mr-3 pt-3" href="faq.html">FAQ</a>
-                    <a class="nav-item nav-link btn-call-to-action" id="btn-post-job" href="Your post a job form public/share link" target="_blank">Post a job</a>
+                    <a class="nav-item nav-link btn-call-to-action" id="btn-post-job" href="https://docs.google.com/forms/d/1Ges_gOQ9_AIahoMoEDRDjW-xgMr3deyxUdPkap5OaYs/edit" target="_blank">Post a job</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-12 col-md-8 welcome-section-title mb-4">
                     <h1 class="title-welcome d-inline-block mt-4 mb-3 mr-2">Just another job board</h1>
-                    <span class="d-inline-block mb-3" id="creator-name">by Your Name here</span>
+                    <span class="d-inline-block mb-3" id="creator-name">grigorisvlachakis</span>
                     <p class="mb-4">Are you looking for co-founders, employees or students looking for a Ph.D. position? Learn more in the <a href="faq.html">FAQ page</a>. If you want to publish a job position it's free and it works as first in first served policy.</p>
                     <!-- Social share buttons -->
                     <div class="col-12 mb-0 pl-0">
@@ -62,7 +62,7 @@
                     <div class="w-100 fixed-bottom d-md-none">
                         <div class="row mobile-call-to-action">
                             <div class="col-12">
-                                <a class="btn-call-to-action d-sm-none" id="btn-post-job-mobile" href="Your post a job form public/share link" target="_blank">Post a job</a>
+                                <a class="btn-call-to-action d-sm-none" id="btn-post-job-mobile" href="https://docs.google.com/forms/d/1Ges_gOQ9_AIahoMoEDRDjW-xgMr3deyxUdPkap5OaYs/edit" target="_blank">Post a job</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
 
             <div class="col-12 col-md-7 pb-0 pb-md-5 pl-xl-0">
                 <div class="col-12 pl-0 mb-0" id="items">
-                    <ul data-sheet-best="Your sheetbest API key" class="ml-0 list-unstyled">
+                    <ul data-sheet-best="https://sheet.best/api/sheets/1e9d00b9-7d65-48d4-ae30-0a1fd967ab69" class="ml-0 list-unstyled">
             
                         <li class="job-listing">
                             <div class="col-12">
