--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Get exposure to my personal network by posting job offers">
         <meta name="author" content="">
-        <meta property="og:url" content="Your website link"/>
+        <meta property="og:url" content="https://vlachakisg.github.io/Not-another-job-board/"/>
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Use my personal network"/>
         <meta property="og:site_name" content="Use my personal network"/>
@@ -35,7 +35,7 @@
                     <h1>FAQ</h1>
                     <h5 class="text-secondary">Last updated February 25, 2020.</h5>
                     <h4 class="mt-5">Why did you build "Just another job board"?</h4>
-                    <p class="mt-3">Write here you own text</p>
+                    <p class="mt-3">Write here between <p class=”mt-3"> & </p></p>
                     <h4 class="mt-5">What other job boards can I use to find tech related jobs?</h4>
                     <p class="mt-3"> <a href="https://marathon.vc/jobs/" target="_blank">Marathon VC portfolio job board</a>, <a href="https://venturefriends.vc/careers/" target="_blank">Venture friends portfolio job board</a>, <a href="https://workable.com/jobs/greekstartups" target="_blank">Workable startups job board</a>, <a href="https://www.facebook.com/groups/startup.jobs.gr/" target="_blank">Facebook group</a>.</p>
                     <h4 class="mt-5">Is posting a job on the website free? Do you get an introduction fee?</h4>
@@ -47,9 +47,9 @@
                     <h4 class="mt-5">Which job posts are showing on the top?</h4>
                     <p class="mt-3">The policy is first in first served, I don't control which job posts are showing on the top.</p>
                     <h4 class="mt-5">How can someone contact you?</h4>
-                    <p class="mt-3">Via mail, it's the shortest path - Your email</p>
+                    <p class="mt-3">Via mail, it's the shortest path - grvl73@gmail.com</p>
                     <h4 class="mt-5">I found the perfect person for my job opening how can I delete the open job position in your website?</h4>
-                    <p class="mt-3">Just send me an email and I will take care of it - Your email</p>
+                    <p class="mt-3">Just send me an email and I will take care of it - grvl73@gmail.com</p>
                     <h4 class="mt-5">What informations are you gathering and how do you use them?</h4>
                     <p class="mt-3">I collect anonymous usage data using an industry standard third-party analytics service (Google Analytics) to better understand the performance of the website. The information I collect via third party services does not contain any personal information. The information I collect is used to improve "Just another job board" and the quality of the website and is not shared with or sold to others.</p>
                     <h4 class="mt-5">What data are you gathering?</h4>
